--- a/ms-student.properties
+++ b/ms-student.properties
@@ -4,12 +4,12 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://localhost:8888/eureka
+# eureka.client.register-with-eureka=true
+# eureka.client.fetch-registry=true
+# eureka.client.service-url.defaultZone=http://localhost:8888/eureka
 
 # logging load balancing information
-loggin.level.com.esi.ms-scolarite.proxy.FormationProxy=DEBUG
+# loggin.level.com.esi.ms-scolarite.proxy.FormationProxy=DEBUG
 spring.cloud.openfeign.client.config.default.logger-level=FULL
 student.name=Alice
 student.age=22
